deployments/k8s/k1s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k1s
  labels:
    app: k1s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k1s
  template:
    metadata:
      labels:
        app: k1s
    spec:
      containers:
        - name: hello-server
          image: ghcr.io/1995parham/k1s:main
          imagePullPolicy: Always
          ports:
            - containerPort: 1378
          livenessProbe:
            httpGet:
              path: /healthz
              port: 1378
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - name: k1s-config
              mountPath: /bin/config.yaml
              subPath: config.yaml
      volumes:
        - name: k1s-config
          configMap:
            name: k1s-config
