deployments/k8s/k1s-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k1s
spec:
  rules:
    - host: k1s.kube.parham.home
      http:
        paths:
          - path: /
            backend:
              serviceName: k1s
              servicePort: 1378
